# ARIA

./: .env.example  .gitignore  README.md  aria.yaml  pyproject.toml
aria/: __init__.py  config.py  main.py
aria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aria/capabilities/: __init__.py  base.py  registry.py
aria/capabilities/execution/: __init__.py  docker_runner.py  python_runner.py
aria/capabilities/system/: __init__.py  file_ops.py  folder_ops.py  process_ops.py
aria/cognitive/: __init__.py  intent.py  prompt_builder.py  router.py  rules.py
aria/core/: __init__.py  logger.py
aria/interfaces/: __init__.py
aria/llm/: __init__.py  client.py  prompts.py
aria/memory/: __init__.py  context.py  knowledge_graph.py  memory_manager.py  vector_store.py
aria/planner/: __init__.py  executor.py  planner.py  step.py  templates.py
aria_brain/: README.md  requirements.txt
aria_brain/data/test/: stats.txt  test.jsonl  train.jsonl  val.jsonl
aria_brain/generators/: __init__.py  base_generator.py  capability_generator.py  edge_case_generator.py  multi_step_generator.py  ollama_generator.py
aria_brain/pipeline/: __init__.py  balancer.py  deduplicator.py  exporter.py  validator.py
aria_brain/schema/: __init__.py  examples.py  router_output.py
aria_brain/scripts/: generate.py  stats.py  validate.py
