# pyproject.toml — ARIA (Adaptive Runtime Intelligence Architecture)

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria"
version = "0.1.0"
description = "Adaptive Runtime Intelligence Architecture — a local-first, capability-driven AI runtime system."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Nitish" },
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12.0",
    "docker>=7.0.0",
]

[project.scripts]
aria = "aria.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria*"]
